--- a/frontend/src/Components/css/Home.css
+++ b/frontend/src/Components/css/Home.css
@@ -115,10 +115,23 @@
  }
 
  .footer{
-    position: absolute;
+    position: sticky;
+    display: none;
     bottom: 0;
     background-color: rgb(25, 25, 25);
     width: 100%;
     height: 4rem;
 
  }
+
+ .imgg{
+    
+    height: 5rem;
+ }
+
+ .imgg img{
+    object-fit: contain;
+    
+ }
+
+ 
