--- a/frontend/src/Components/css/Home.css
+++ b/frontend/src/Components/css/Home.css
@@ -12,13 +12,11 @@
 .nav-color{
     background-color: rgb(46, 46, 46); 
     border-radius: 2rem;
-    height: 10rem;
+    height: 12rem;
 }
 .nav-color h1{  
     margin-left: 2rem;
     font-size: 2rem;
-    padding-top: 2rem; 
-    margin-top: 3rem;
     position: relative;
     color: white;
   
@@ -134,4 +132,15 @@
     
  }
 
- 
+.upper{
+    margin-top: 4rem;
+    display: flex;
+}
+
+#sel_color{
+    margin-top: 3rem;
+    margin-left: 1rem;
+    height: 3rem;
+    width: 6rem;
+    border-radius: 1rem;
+}
