--- a/frontend/src/Components/css/Dashboard.css
+++ b/frontend/src/Components/css/Dashboard.css
@@ -2,13 +2,22 @@
     text-align: center;
     font-size: 2rem;
     height: 3rem;
-    color: white;
+    color: rgb(7, 88, 159); 
     box-shadow: 2px 2px 10px rgb(82, 82, 82);
-    background-color: rgb(23, 23, 23);
+    background-color: rgb(255, 255, 255);
+}
+
+hr{
+    margin-top: 2rem;
+    width: 95%;
+    height: 0.05rem;
+    background: rgb(8,70,119);
+    background: linear-gradient(90deg, rgba(8,70,119,1) 0%, rgba(0,168,255,1) 100%);
 }
 
 .add{
-    background-color: rgb(23, 23, 23);
+    background: rgb(8,70,119);
+    background: linear-gradient(90deg, rgba(8,70,119,1) 0%, rgba(0,168,255,1) 100%);
     margin: 2rem;
     height: 5rem;
     width: 96%;
@@ -25,11 +34,12 @@
 
 .current_events , .past_events{
     text-align: center;
-    color: white;
+    color: rgb(7, 88, 159); 
     font-size: 1.5rem;
+    box-shadow: 2px 2px 10px rgb(154, 154, 154);
     border-radius: 2rem;
     margin: 2rem;
-    background-color: rgb(43, 43, 43);
+    background-color: rgb(255, 255, 255);
     height: 23rem;
     
 }
@@ -41,6 +51,8 @@
 }
 
 .Card{
+   
+    background-color: rgb(66, 167, 255); ;
     margin-left: 2rem;
     border-radius: 2rem;
 }
