--- a/frontend/src/Components/css/Home.css
+++ b/frontend/src/Components/css/Home.css
@@ -13,7 +13,8 @@ hr{
     background-color: rgb(7, 88, 159); 
 }
 .nav-color{
-    background-color: rgb(7, 88, 159); 
+    background: rgb(8,70,119);
+    background: linear-gradient(90deg, rgba(8,70,119,1) 0%, rgba(0,168,255,1) 100%);
     margin-top: 2rem;
     height: 20rem;
 }
@@ -79,12 +80,13 @@ hr{
 }
 
 .activity{
-    
+    margin-top: 2rem;
     padding-top: 1rem;
     padding-left: 2rem;
     color: white;
     height: 20rem; 
-    background-color: rgb(7, 88, 159); 
+    background: rgb(8,70,119);
+    background: linear-gradient(90deg, rgba(8,70,119,1) 0%, rgba(0,168,255,1) 100%);
     animation-iteration-count: 1;
     animation-timing-function: ease-in-out forwards;
     animation-duration: 2s;
